[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MRPyCM"
version = "0.0.1a"
authors = [
  { name="Gabriel Gerez", email="gagerezs@gmail.com" },
]
description = "A Python package for the Polarizable Continuum model in a Multi-Resolution framework"
readme = "README.md"
requires-python = ">=3.11.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gabrielgerez/MRPyCM"